force-app/main/default/objects/Opportunity/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Ready for Billing</fullName>
            </value>
            <value>
                <fullName>Awaiting Billing</fullName>
            </value>
            <value>
                <fullName>Billed (Outstanding Receivable)</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Deposit Invoiced</fullName>
            </value>
            <value>
                <fullName>Deposit Paid</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>