force-app/main/default/objects/Opportunity/fields/Deposit_Amount_Required__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Required__c</fullName>
    <label>Deposit Amount Required</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>