force-app/main/default/objects/Opportunity/fields/Deposit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Percent__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Deposit Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>