force-app/main/default/objects/Opportunity/fields/Deposit_Timing__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Timing__c</fullName>
    <label>Deposit Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Equipment Order</fullName>
            </value>
            <value>
                <fullName>Before Completion</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>